# chessBot

./: .env  .env.schema  .eslintrc.cjs  .git-blame-ignore-revs  .gitignore  .prettierignore  .prettierrc  .prettierrc.json  LICENSE  TEST.md  chessBot.code-workspace  connection_diagram.drawio  index.html  jest.config.ts  nodemon.json  package-lock.json  package.json  readme.md  tsconfig.json  writing_tests.md
.github/ISSUE_TEMPLATE/: TASK-REQUEST.yml  TASK_REQUEST.md  expedited-task.md  new-member-task.md
.github/workflows/: docs.yaml  docs.yml  main.yaml  main.yml
bot/: .clang-format  .gitignore  CMakeLists.txt  diagram.json  partitions.csv  readme.md  sdkconfig  support.py  wokwi.toml
bot/main/: CMakeLists.txt  activityLed.cpp  adc.cpp  button.cpp  dac.cpp  differentialKinematics.cpp  idf_component.yml  main.cpp  update.cpp  wireless.cpp
bot/main/src/: activityLed.cpp  adc.cpp  button.cpp  config.cpp  dac.cpp  desc.cpp  differentialKinematics.cpp  main.cpp  motor.cpp  netThread.cpp  robotThread.cpp  update.cpp  wireless.cpp
chess-bot-client/: package-lock.json  package.json
chessBotArduino/: README.md  packet_docs.txt  platformio.ini
chessBotMain/: chessBotMain.ino
client/: package.json
docs/: CNAME  Home.md  Recap-Meeting.md  Resource-Library.md  Robot-Server-Implementation.md  Writing-Tests.md  hierarchy.html  index.html
documentation/: Home.md  Resource-Library.md  server_client.md
saves/: 11a038b3-97af-49ae-9334-5a33a129ff36+c137520d-077c-4542-a32f-6d2d5df36ad1
server/: .eslintrc.json  Finalized Psuedo Code.txt  config.json  package-lock.json  package.json  server.js
site/: CNAME
webServer/: .eslintrc.json  Finalized Psuedo Code.txt  config.json  package-lock.json  package.json  readme.md  server.js  test.js  tsconfig.json
(+284 files in other folders)
